# actions

./: pyproject.toml
.github/workflows/: deploy_manual.yml  main.yml
app/: calc.py
