[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["The-vinicius <viniciusnao41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
black = "^22.8.0"
gunicorn = "^20.1.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
